--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,32 +1,96 @@
-a{
-    color: inherit;
+a {
+  color: inherit;
 }
-.navbar-brand > img{
-    width: 100px;
+.navbar-brand > img {
+  width: 100px;
 }
-.navbar-main .active{
-    color: black;
-    background-color: white;
-    border-radius: 5px;
+.navbar-main .active {
+  color: black;
+  background-color: white;
+  border-radius: 5px;
 }
-.nav a{
-    text-decoration: none;
-    color: white;
-    margin: 0 10px;
-    font-weight: 400;
-    transition: .5s;
+.nav a {
+  text-decoration: none;
+  color: white;
+  margin: 0 10px;
+  font-weight: 400;
+  transition: 0.5s;
 }
-.nav a:hover{
-    color: black;
-    background-color: grey;
-    padding: 5px 10px;
-    border-radius: 5px;
+.nav a:hover {
+  color: black;
+  background-color: grey;
+  padding: 5px 10px;
+  border-radius: 5px;
 }
-.header-main{
-    min-height: 100vh;
-    min-width: 100vh;
+.header-main {
+  min-height: 100vh;
+  min-width: 100vh;
 }
-.carousel-inner{
-    max-height: 715px;
+.carousel-inner {
+  max-height: 715px;
 }
 
+/*-------------------------FOOTER*/
+
+.footer {
+  background: #212529;
+  color: white;
+  padding: 20px 0;
+}
+.footer .row {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  width: 80%;
+}
+
+.list-footer ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.list-footer ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+}
+.social-media ul {
+  padding: 0;
+}
+.social-media ul li {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+}
+.social-media ul li img {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.social-media ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: 600;
+}
+.footer-logo {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .list-footer {
+    display: none;
+  }
+  .about-footer {
+    display: none;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .list-footer {
+    display: none;
+  }
+  .about-footer {
+    display: none;
+  }
+  /*-----------------------end-FOOTER*/
+}
