--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,7 +29,9 @@ a {
 .carousel-inner {
   max-height: 715px;
 }
-
+.badge {
+  background-color: blue;
+}
 /*-------------------------FOOTER*/
 
 .footer {
